horizontal scroll bar fix

--- a/index/index.css
+++ b/index/index.css
@@ -6,6 +6,7 @@ body{
     width:80%;
     /* justify-content:center; */
     margin:0em 0em 0em 8em;
+    overflow-x:hidden ;
     
  
 }
